Fix spacing issues - as per Nick's advice

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -50,20 +50,25 @@ header {
     margin-left: 20px;
 }
 
-/* COMMENTS */ 
+/* COMMENTS */
+
 .user_avatar {
   float: left;
-  margin-right: 10px;
+  margin-right: 20px;
   height: 50px;
   width: 50px;
+
 }
+
 .comment_box {
   margin-top: 30px;
 }
+
 .comment_body {
   margin-top: 12px;
   margin-left: 60px;
 }
+
 .author_info {
    font-style: italic;
    color: grey;
